NetBSD Problem Report #50512

From www@NetBSD.org  Thu Dec 10 21:14:57 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B9EBAA6662
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 10 Dec 2015 21:14:57 +0000 (UTC)
Message-Id: <20151210211456.6BCD6A667B@mollari.NetBSD.org>
Date: Thu, 10 Dec 2015 21:14:56 +0000 (UTC)
From: fzerangue@mac.com
Reply-To: fzerangue@mac.com
To: gnats-bugs@NetBSD.org
Subject: Source code condition impossible
X-Send-Pr-Version: www-1.0

>Number:         50512
>Category:       port-arm
>Synopsis:       Source code condition impossible
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Dec 10 21:15:00 +0000 2015
>Closed-Date:    Wed Jul 13 16:10:12 +0000 2016
>Last-Modified:  Wed Jul 13 16:10:12 +0000 2016
>Originator:     Frank Zerangue
>Release:        NetBSD-7.0
>Organization:
>Environment:
Darwin Franks-Mac-Pro-3.local 14.5.0 Darwin Kernel Version 14.5.0: Wed Jul 29 02:26:53 PDT 2015; root:xnu-2782.40.9~1/RELEASE_X86_64 x86_64
>Description:
Source code condition impossible:

usr/src/sys/arch/arm/arm/cpufunc.c

#if defined(CPU_ARM1136)
		if (cputype == CPU_ID_ARM1136JS &&
		    cputype == CPU_ID_ARM1136JSR1) {
			cpufuncs = arm1136_cpufuncs;
			if (cputype == CPU_ID_ARM1136JS)
				cpufuncs.cf_sleep = arm1136_sleep_rev0;
		}
#endif

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50512 CVS commit: src/sys/arch/arm/arm
Date: Thu, 10 Dec 2015 22:04:54 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Thu Dec 10 22:04:54 UTC 2015

 Modified Files:
 	src/sys/arch/arm/arm: cpufunc.c

 Log Message:
 PR port-arm/50512: Source code condition impossible

 Fix condition which broke ARM1136 function selection when ARM1176 support
 was added


 To generate a diff of this commit:
 cvs rdiff -u -r1.158 -r1.159 src/sys/arch/arm/arm/cpufunc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Fri, 11 Dec 2015 09:08:00 +0000
State-Changed-Why:
[pullup-7 #1060]
[pullup-6 #1354]


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50512 CVS commit: [netbsd-7] src/sys/arch/arm/arm
Date: Tue, 12 Jan 2016 10:16:50 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue Jan 12 10:16:50 UTC 2016

 Modified Files:
 	src/sys/arch/arm/arm [netbsd-7]: cpufunc.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #1060):
 	sys/arch/arm/arm/cpufunc.c: revision 1.159
 PR port-arm/50512: Source code condition impossible
 Fix condition which broke ARM1136 function selection when ARM1176 support
 was added


 To generate a diff of this commit:
 cvs rdiff -u -r1.150.2.1 -r1.150.2.2 src/sys/arch/arm/arm/cpufunc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50512 CVS commit: [netbsd-7-0] src/sys/arch/arm/arm
Date: Tue, 12 Jan 2016 10:18:44 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue Jan 12 10:18:44 UTC 2016

 Modified Files:
 	src/sys/arch/arm/arm [netbsd-7-0]: cpufunc.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #1060):
 	sys/arch/arm/arm/cpufunc.c: revision 1.159
 PR port-arm/50512: Source code condition impossible
 Fix condition which broke ARM1136 function selection when ARM1176 support
 was added


 To generate a diff of this commit:
 cvs rdiff -u -r1.150.2.1 -r1.150.2.1.2.1 src/sys/arch/arm/arm/cpufunc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50512 CVS commit: [netbsd-6] src/sys/arch/arm/arm
Date: Wed, 13 Jul 2016 08:20:45 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Wed Jul 13 08:20:45 UTC 2016

 Modified Files:
 	src/sys/arch/arm/arm [netbsd-6]: cpufunc.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #1354):
 	sys/arch/arm/arm/cpufunc.c: revision 1.159
 PR port-arm/50512: Source code condition impossible
 Fix condition which broke ARM1136 function selection when ARM1176 support
 was added


 To generate a diff of this commit:
 cvs rdiff -u -r1.104.2.2 -r1.104.2.3 src/sys/arch/arm/arm/cpufunc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Wed, 13 Jul 2016 16:10:12 +0000
State-Changed-Why:
pullups done


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.